# a2aProjects

./: .gitignore  README.md  pyproject.toml  talk_to_agent.py  travel_planner_agent.py  ui.html  weather_stylist_agent.py
currency_stock_pair/: currency_agent.py  currency_config.json  currency_mcp_server.py  currency_pair_agent.py  forex_agent_executor.py  forex_server.py  orchestrator.py  stock_agent_executor.py  stock_config.json  stock_data_agent.py  stock_data_server.py  stock_server.py  test.py
reddit/: a2a_client.py  docs_a2a.py  googleDocs.py  google_docs_config.json  reddit_a2a.py  reddit_config.json  tes.py
reddit/agents/: clientResponse.py  googleDocs_llm.py  initialPlanner.py  reddit_llm.py  workflow.py
travel_weather_demo/: travel_planner_agent.py  weather_mcp_server.py  weather_stylist_agent.py
vacation_planner/: airbnb_a2a.py  airbnb_config.json  flights_a2a.py  flights_mcp_server.py  tester.py
vacation_planner/agents/: a2a_final_response.py  airbnb_llm.py  flight_llm.py  routing.py
